--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -63,6 +63,7 @@
 
 
   <ItemGroup Label="Test framework">
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
 
