--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
 
   <ItemGroup Label="Test framework">
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
 
