--- a/src/Progress.UnitTests/Progress.UnitTests.csproj
+++ b/src/Progress.UnitTests/Progress.UnitTests.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup Label="Test framework">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
 
