--- a/src/Integration.UnitTests/app.config
+++ b/src/Integration.UnitTests/app.config
@@ -94,6 +94,10 @@
         <assemblyIdentity name="Microsoft.CodeAnalysis.Workspaces.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.12.0.0" newVersion="2.12.0.817" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
