--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -454,9 +454,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.2015.csproj">
-      <Project>{BA771DF7-9F99-4DE3-B85B-3E5DB742A55C}</Project>
-      <Name>SonarQube.Client.2015</Name>
+    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.csproj">
+      <Name>SonarQube.Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\Integration.TeamExplorer\Integration.TeamExplorer.csproj">
       <Project>{9FCAEACD-EDEA-42D3-A8E4-16E42D1CF8F4}</Project>
