--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -103,6 +103,7 @@
     <PackageReference Include="Grpc" Version="1.4.1" />
     <PackageReference Include="Grpc.Tools" Version="1.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.LanguageServices" Version="1.3.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.10.0" Version="10.0.30319" />
     <PackageReference Include="System.Collections.Immutable" Version="1.1.37" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="1.3.2" />
@@ -158,6 +159,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="CFamily\CFamilyStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>CFamilyStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\PackageStrings.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
@@ -211,6 +216,11 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Compile Update="CFamily\CFamilyStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CFamilyStrings.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
