Bug #1071 Close Options dialogue when showing settings file
NB changes to other settings (e.g. logging level) are not saved

--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -30,6 +30,7 @@
   
   <ItemGroup Label="Framework references">
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="WindowsBase" />
