--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -69,6 +69,7 @@
     
   <ItemGroup Label="Framework references">
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="WindowsBase" />
