--- a/src/Integration.TeamExplorer/Integration.TeamExplorer.csproj
+++ b/src/Integration.TeamExplorer/Integration.TeamExplorer.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup Label="Specify which VS-specific refs are required">
     <RequiresTeamFoundation>true</RequiresTeamFoundation>
+
+    <!-- Conditional compilation constant for VS2019-specific code.
+         We'd prefer to set this the shared SonarLint.VSSpecificAssemblies.props file, but
+         the IDE isn't picking up the setting if we do that. -->
+    <DefineConstants Condition="($(VisualStudioVersion)=='16.0' AND $(BuildingInsideVisualStudio)=='true') OR $(VSTargetVersion)=='2019'">$(DefineContants);VS2019</DefineConstants>
   </PropertyGroup>
   <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
 
