--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,19 +1,19 @@
 <Project>
- <PropertyGroup>
-    <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)..\.sonarlint\sonarlint-visualstudioCsharp.ruleset</CodeAnalysisRuleSet>
 
+  <Import Project="..\Directory.Build.props" />
+
+  <!-- Settings common to the SLVS product and test code.
+       This do not apply to the sonarqube-webclient submodule.  -->
+  
+  <PropertyGroup>
    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
    <DebugType>Full</DebugType>
- </PropertyGroup>
+  </PropertyGroup>
 
   <ItemGroup Label="Common items">
     <Compile Include="$(MSBuildThisFileDirectory)AssemblyInfo.Shared.cs">
       <Link>Properties\AssemblyInfo.Shared.cs</Link>
     </Compile>
-    <AdditionalFiles Include="$(MSBuildThisFileDirectory)SonarLint.xml">
-      <Link>Properties\SonarLint.xml</Link>
-    </AdditionalFiles>
   </ItemGroup>
-
 
 </Project>
