Added Core project and unit test project
* moved SonarLanguageKeys constants class to the new assembly
* manually verified that the VSIX contains the new assembly
* manually verified that the new assembly has the expected assembly properties

--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -121,6 +121,7 @@
       <Project>{BA771DF7-9F99-4DE3-B85B-3E5DB742A55C}</Project>
       <Name>SonarQube.Client.2015</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Integration.TeamExplorer\Integration.TeamExplorer.csproj">
       <Project>{9FCAEACD-EDEA-42D3-A8E4-16E42D1CF8F4}</Project>
       <Name>Integration.TeamExplorer</Name>
