--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -63,6 +63,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Progress\Progress.csproj" />
     <ProjectReference Include="..\ProgressVS\ProgressVS.csproj" />
   </ItemGroup>
