--- a/src/Core.UnitTests/Core.UnitTests.csproj
+++ b/src/Core.UnitTests/Core.UnitTests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\TestInfrastructure\TestInfrastructure.csproj" />
   </ItemGroup>
 
 </Project>
